@@ -12,7 +12,6 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import javax.naming.directory.BasicAttribute;
 import javax.naming.directory.DirContext;
@@ -177,8 +176,8 @@ public class GroupLdapRepository extends AbstractContainerLdapRepository<GroupOr
 		 * Remove from this group, all groups within (sub LDAP DN) this group. This operation is needed since we are not
 		 * rebuilding the cache from the LDAP. This save a lot of computations.
 		 */
-		findAll().values().stream().filter(g -> DnUtils.equalsOrParentOf(group.getDn(), g.getDn()))
-				.collect(Collectors.toList()).forEach(this::removeFromJavaCache);
+		findAll().values().stream().filter(g -> DnUtils.equalsOrParentOf(group.getDn(), g.getDn())).toList()
+				.forEach(this::removeFromJavaCache);
 
 		// Remove from LDAP the recursively the group. Anything that was not nicely cleaned will be deleted there.
 		template.unbind(org.springframework.ldap.support.LdapUtils.newLdapName(group.getDn()), true);
